improved test readability